Code refactpring